Setting up TestSuite build and run