@@ -9,15 +9,48 @@ sourceSets {
     main.resources.srcDirs = ['unused']
 }
 
+tasks.register('testJar', Jar) {
+    archiveClassifier = 'tests'
+    from sourceSets.test.output
+
+    from sourceSets.test.resources
+
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
+tasks.named("testJar").configure {
+    dependsOn testClasses
+}
+
+configurations {
+    testArtifacts
+}
+
+artifacts {
+    archives testJar
+    testArtifacts testJar
+}
+
 dependencies {
     testImplementation project(':Components:Strata.Foundation.Chronicle')
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.3'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.3'
+    testImplementation 'org.apache.logging.log4j:log4j-core:2.24.3'
+    testImplementation 'org.slf4j:slf4j-reload4j:2.0.17'
 }
 
 test {
     useJUnitPlatform {
-        includeTags("CommitStage")
+        includeTags("IntegrationStage")
     }
+    jvmArgs = [
+            '--add-opens=java.base/java.lang=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
+            '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+            '--add-opens=java.base/java.nio=ALL-UNNAMED',
+            '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
+            '--add-opens=java.base/java.io=ALL-UNNAMED',
+            '--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED'
+    ]
 }
